--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "@manifoldxyz/libraries-solidity": "^1.0.2",
     "@openzeppelin/contracts": "^4.2.0",
-    "@openzeppelin/contracts-upgradeable": "^4.2.0"
+    "@openzeppelin/contracts-upgradeable": "^4.2.0",
+    "@truffle/hdwallet-provider": "^2.0.4",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@openzeppelin/truffle-upgrades": "^1.6.1",
     "eth-gas-reporter": "^0.2.23",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "truffle-plugin-verify": "^0.5.23"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
