--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@openzeppelin/contracts": "^4.2.0",
     "@openzeppelin/contracts-upgradeable": "^4.2.0",
     "@truffle/hdwallet-provider": "^2.0.4",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "web3": "^1.7.1"
   },
   "devDependencies": {
     "@openzeppelin/truffle-upgrades": "^1.6.1",
